# Scam-Detector

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  action.py  bot_config.py  docker-compose.yml  main.py  pyproject.toml  scam_detector.py
