[project]
name = "Scam-Detector"
version = "1.0.0"
description = "A discord bot for detecting Mr. Beast scams"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "discord>=2.3.2",
    "discord-py>=2.7.1",
    "faiss-cpu>=1.14.3",
    "pillow>=12.3.0",
    "torch>=2.0.0",
    "torchvision>=0.27.1",
    "transformers>=5.13.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
